--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Express App</title>
-		<link rel="stylesheet" href="./laconchadetumadre/css/main.css" />
+		<link rel="stylesheet" href="./static/css/main.css" />
 	</head>
 	<body>
 		<h1 class="red">Hello world</h1>
-		damn
 	</body>
 </html>
